# jsitter

./: .gitmodules  make.sh  pom.xml
native/: CMakeLists.txt  linux.cmake  mingw-w64-x86_64.cmake
native/lib/utf8proc/: utf8proc.h
native/src/: java_api.c  tests.c
src/main/java/jsitter/interop/: JSitter.java
src/main/kotlin/jsitter/api/: ReducingZipper.kt  api.kt
src/main/kotlin/jsitter/impl/: SubtreeAccess.kt  TSLanguage.kt  TSZipper.kt
src/test/kotlin/jsitter/test/: tests.kt
